// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#CalendarDay should render correctly 1`] = `
<styled.div
  isHidden={false}
>
  <styled.button
    className={undefined}
    colors={Object {}}
    data-test="CalendarDay"
    disabled={undefined}
    isFuture={false}
    isHidden={false}
    isHovered={false}
    isPast={false}
    isSelected={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOver={[Function]}
  >
    1
  </styled.button>
</styled.div>
`;

exports[`#CalendarDay should render hidden 1`] = `
<styled.div
  isHidden={true}
>
  <styled.button
    className={undefined}
    colors={Object {}}
    data-test="CalendarDay"
    disabled={undefined}
    isFuture={false}
    isHidden={true}
    isHovered={false}
    isPast={false}
    isSelected={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOver={[Function]}
  >
    1
  </styled.button>
</styled.div>
`;
